# hyperion

./: .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/install-all/: action.yml
.github/scripts/: smoke.py
.github/workflows/: create-release-branch.yml  create-release.yml  docs.yml  packaging.yml  pre-commit.yml  publish.yml  pytest.yml
docs/: asset_collections.md  ddd-refactor-plan.md  gen_ref_pages.py  index.md
docs/explanation/: architecture.md  assets-and-catalog.md  extras-and-lite-core.md  index.md  ports-and-adapters.md
docs/how-to/: asset-collections.md  cached-catalog.md  configure-via-environment.md  feature-assets.md  geo-utilities.md  index.md  install-and-extras.md  persistent-store-assets.md  repartition-data.md  run-a-source.md  schemas.md
docs/reference/: migration-pre-1.0.md
docs/tutorials/: custom-source.md  first-datalake-asset.md  index.md
hyperion/: _compat.py  asyncutils.py  composition.py  config.py  dateutils.py  logging.py  typeutils.py
hyperion/.github/actions/install-all/: action.yml
hyperion/adapters/: __init__.py
hyperion/adapters/cache/: __init__.py  dynamodb.py  filesystem.py  memory.py
hyperion/adapters/geocoder/: __init__.py  google.py  static.py
hyperion/adapters/http/: __init__.py  proxy.py
hyperion/adapters/keyval/: __init__.py  dynamodb.py  filesystem.py  memory.py
hyperion/adapters/queue/: __init__.py  filesystem.py  memory.py  sqs.py
hyperion/adapters/schema_registry/: __init__.py  local.py  s3.py
hyperion/adapters/secrets/: __init__.py  aws_sm.py  dummy.py  env.py
hyperion/adapters/serialization/: __init__.py  avro.py
hyperion/adapters/storage/: __init__.py  filesystem.py  memory.py  s3.py
hyperion/application/: __init__.py  persistent_cache.py
hyperion/catalog/: __init__.py  catalog.py  schema.py
hyperion/collections/: asset_collection.py
hyperion/data/: asset_schemas.py  typeutils.py
hyperion/domain/: assets.py  geo.py  messages.py
hyperion/entities/: catalog.py
hyperion/infrastructure/: aws.py  cache.py  http.py  httputils.py  keyval.py  message_queue.py  queue.py  secrets.py  secretsmanager.py
hyperion/infrastructure/geo/: __init__.py  gmaps.py  location.py
hyperion/ports/: cache.py  geocoder.py  keyval.py  queue.py  schema_registry.py  secrets.py  storage.py
hyperion/repository/: asset_collection.py
hyperion/sources/: base.py  cli.py
tests/: conftest.py  test_asset_collection.py  test_asyncutils.py  test_composition.py  test_dateutils.py  test_deprecation_shims.py  test_import_graph.py  test_typeutils.py
tests/adapters/geocoder/: test_google.py  test_static.py
tests/adapters/keyval/: test_filesystem.py
tests/adapters/secrets/: test_env.py
tests/adapters/serialization/: test_avro.py
tests/adapters/storage/: test_storage.py
tests/application/: test_persistent_cache.py
tests/catalog/: test_catalog.py  test_dateutils.py  test_schema.py
tests/data/: create_test_data.py  test_typeutils.py
tests/data/assets/: custom_schema.json  places.json  places.v1.avro  places.v1.avro.json  superfeature.2025-01-02.v1.avro  superfeature.2025-01-03.v1.avro  superfeature.2025-01-04.v1.avro  superfeature.2025-01-05.v1.avro  superfeature.2025-01-06.v1.avro  superfeature.2025-01-07.v1.avro  superfeature.2025-01-08.v1.avro  superfeature.v1.avro.json  users.json  users.v1.avro  users.v1.avro.json  users.v1.schema.json
tests/entities/: test_catalog.py
tests/infrastructure/: test_cache.py  test_http.py  test_httputils.py  test_keyval.py  test_message_queue.py  test_persistent_cache.py  test_secretsmanager.py
tests/infrastructure/aws/: conftest.py  test_s3.py
tests/infrastructure/geo/: test_gmaps.py  test_location.py
tests/ports/: test_snappy_optional.py
tests/sources/: test_base.py  test_cli.py
