[tool.poetry]
name = "hyperion-sdk"
version = "0.9.0"
description = "A headless ETL / ELT / data pipeline and integration SDK for Python."
authors = ["Tomas Votava <info@tomasvotava.eu>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "hyperion" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
loguru = "^0.7.2"
fastavro = "^1.10.0"
boto3 = "^1.35.36"
env-proxy = "^1.1.0"
python-dotenv = "^1.0.1"
python-snappy = "^0.7.3"
googlemaps = "^4.10.0"
cachetools = ">=5.5.2,<7.0.0"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.10.6"
aws-lambda-typing = "^2.20.0"
aioboto3 = "^13.2.0"
haversine = "^2.9.0"
numpy = "^2.2.3"
httpx = "^0.28.1"
polars = "^1.26.0"
pandera = { extras = ["polars"], version = ">=0.23.1,<0.25.0" }

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.10,<0.13.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
boto3-stubs = {extras = ["dynamodb", "s3"], version = "^1.37.24"}
types-cachetools = ">=5.5.0.20240820,<7.0.0.0"
types-python-dateutil = "^2.9.0.20241003"
pytest-asyncio = ">=0.25.3,<1.1.0"
moto = { extras = ["server"], version = "^5.1.1" }
typing-extensions = { version = "^4.12.2", python = "<3.11" }
commitizen = "^4.4.1"
mypy-boto3 = "^1.38.0"
mypy-boto3-s3 = "^1.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # allow asserts in tests
    "RUF018", # allow asserts with walrus in tests
]


[tool.ruff.lint]
select = [
    #"D",
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "S",
    "A",
    "DTZ",
    "PT",
    "SIM",
    "PTH",
    "PD",
    "RUF",
    "T20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore:.*utcnow.* is deprecated and scheduled for removal:DeprecationWarning"
addopts = [
    "-vv",
    "--cov=hyperion",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=lcov",
    "tests/",
]
asyncio_default_fixture_loop_scope = "session"


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["snappy.*", "googlemaps.*", "aioboto3.*", "haversine.*"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
