[tool.poetry]
name = "hyperion-sdk"
version = "1.0.2"
description = "A headless ETL / ELT / data pipeline and integration SDK for Python."
authors = ["Tomas Votava <info@tomasvotava.eu>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "hyperion" }]

[tool.poetry.urls]
Homepage = "https://github.com/tomasvotava/hyperion"
Documentation = "https://tomasvotava.github.io/hyperion/"
Repository = "https://github.com/tomasvotava/hyperion"
Changelog = "https://github.com/tomasvotava/hyperion/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

# -- Lite core (default install): always installed. --
loguru = ">=0.7.2,<0.8"
env-proxy = "^1.1.1"
python-dotenv = "^1.0.1"
cachetools = ">=5.5.2,<8.0.0"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.10.6"
aws-lambda-typing = "^2.20.0"
haversine = ">=2.9,<3"
httpx = ">=0.28.1,<0.29"
click = ">=8.2.1,<9"

# -- Optional, gated by extras (see [tool.poetry.extras]). Version
#    constraints are intentionally byte-identical to pre-1.0 (#168 owns
#    version ranges; S10 only flips these to optional). --
boto3 = { version = ">=1.35.36,<2", optional = true }
aioboto3 = { version = ">=13.2,<14", optional = true }
polars = { version = "^1.35.0", optional = true }
pandera = { extras = ["polars", "pandas"], version = ">=0.27,<0.32", optional = true }
numpy = { version = ">=2.2.3,<3", optional = true }
fastavro = { version = ">=1.10,<2", optional = true }
googlemaps = { version = ">=4.10,<5", optional = true }
python-snappy = { version = ">=0.7.3,<0.8", optional = true }

[tool.poetry.extras]
aws = ["boto3", "aioboto3"]
data = ["polars", "pandera", "numpy"]
catalog = ["fastavro"]
geo = ["googlemaps"]
snappy = ["python-snappy"]
all = ["boto3", "aioboto3", "polars", "pandera", "numpy", "fastavro", "googlemaps", "python-snappy"]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.10,<0.18.0"
mypy = ">=1.15,<3.0"
pytest = ">=8.3.5,<11.0.0"
pytest-cov = ">=6,<8"
boto3-stubs = { extras = ["dynamodb", "s3"], version = "^1.37.24" }
types-cachetools = ">=5.5.0.20240820,<8.0.0.0"
types-python-dateutil = "^2.9.0.20241003"
pytest-asyncio = ">=0.25.3,<2.0.0"
moto = { extras = ["server"], version = ">=5.1.1,<6" }
commitizen = "^4.4.1"
mypy-boto3 = "^1.38.0"
mypy-boto3-s3 = "^1.38.0"
import-linter = ">=2.0,<3"

# Docs toolchain. Optional so the default install, `--all-extras`, and the
# `install-all` composite stay untouched; pulled only with `poetry install
# --with docs` (locally and in .github/workflows/docs.yml).
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6,<2"
mkdocs-material = ">=9.5,<10"
mkdocstrings = { extras = ["python"], version = ">=0.27,<1.1" }
mkdocs-gen-files = ">=0.5,<0.7"
mkdocs-literate-nav = ">=0.6,<0.7"
mkdocs-section-index = ">=0.3,<0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # allow asserts in tests
    "RUF018", # allow asserts with walrus in tests
]


[tool.ruff.lint]
select = [
    #"D",
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "S",
    "A",
    "DTZ",
    "PT",
    "SIM",
    "PTH",
    "PD",
    "RUF",
    "T20",
]
ignore = [
    # py3.11 floor enables UP042 (str+Enum -> StrEnum). Migrating is
    # behaviour-changing (StrEnum alters str()/format output, and
    # ArrivalEvent rides in message envelopes), which the DDD refactor
    # forbids. StrEnum migration is deferred to a separate, non-S10 change.
    "UP042",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore:.*utcnow.* is deprecated and scheduled for removal:DeprecationWarning"
addopts = [
    "-vv",
    "--cov=hyperion",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=lcov",
    "tests/",
]
asyncio_default_fixture_loop_scope = "session"


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["snappy.*", "googlemaps.*", "aioboto3.*", "haversine.*"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = false
changelog_incremental = true
